--- a/config/default/segmenter.yaml
+++ b/config/default/segmenter.yaml
@@ -1,6 +1,8 @@
 model: 'sam2'
 backbone: 'l'
-simplify_tolerance: 1.0
+box_batch_size: 50
 box_padding_percentage: 0.00
 n_postprocess_workers: 16
-box_batch_size: 50
+pp_simplify_tolerance: 1.0
+pp_remove_rings: true
+pp_remove_small_geoms: 50
