--- a/config/default/segmenter.yaml
+++ b/config/default/segmenter.yaml
@@ -2,7 +2,8 @@ model: 'sam2'
 backbone: 'l'
 box_batch_size: 50
 box_padding_percentage: 0.00
-n_postprocess_workers: 16
-pp_simplify_tolerance: 1.0
+pp_n_workers: 16
+pp_down_scale_masks_px: 256
+pp_simplify_tolerance: 0.0
 pp_remove_rings: true
 pp_remove_small_geoms: 50
