--- a/config/train_detector/detector_dino_detrex.yaml
+++ b/config/train_detector/detector_dino_detrex.yaml
@@ -3,25 +3,26 @@ architecture: ''
 checkpoint_path: '/home/hugo/Downloads/dino_r50_4scale_24ep.pth'
 batch_size: 1
 num_classes: 1
-box_predictions_per_image: 500
-box_score_thresh: 0.05
-box_nms_thresh: 0.5
+box_predictions_per_image: null
+box_score_thresh: null
+box_nms_thresh: null
 
 # Training Data and Output path
 data_root_path: '/mnt/disk2/Data/tilerized'
 train_dataset_names: ['panama_bci50ha', 'ecuador_reforestree']
-train_output_path: '/mnt/disk2/trainings'
+train_output_path: './output/detrex_dino_r50_4scale_24ep_2'
 
 # Training Params
 #main_metric: 'mAP'
-lr: 1e-4
+seed: 0
+lr: null
 max_epochs: 100
-freeze_layers: -1
+freeze_layers: null
 train_log_interval: 10
 eval_epoch_interval: 1
 #grad_accumulation_steps: 1
-backbone_model_pretrained: True
-scheduler_step_size: 10
-scheduler_warmup_steps: 100
-scheduler_gamma: 0.1
+backbone_model_pretrained: null
+scheduler_epochs_steps: null
+scheduler_warmup_steps: null
+scheduler_gamma: null
 dataloader_num_workers: 4
