--- a/config/train_detector/detector_dino_detrex.yaml
+++ b/config/train_detector/detector_dino_detrex.yaml
@@ -16,6 +16,18 @@ train_output_path: './output/detrex_dino_r50_4scale_24ep_2'
 #main_metric: 'mAP'
 seed: 0
 wandb_project: 'neurips_d&b_detector'
+
+augmentation_image_size: 1024     # Final image size for both training and evaluation
+augmentation_train_crop_size_range: [784, 2048]
+augmentation_crop_min_intersection_ratio: 0.5
+augmentation_flip_horizontal: True
+augmentation_flip_vertical: True
+augmentation_rotation: 30
+augmentation_rotation_prob: 0.5
+augmentation_contrast: 0.2
+augmentation_brightness: 0.2
+augmentation_saturation: 0.2
+
 lr: null
 max_epochs: 100
 freeze_layers: null
@@ -27,3 +39,6 @@ scheduler_epochs_steps: null
 scheduler_warmup_steps: null
 scheduler_gamma: null
 dataloader_num_workers: 4
+
+use_gradient_checkpointing: null
+use_amp: true
