--- a/config/train_detector/detector_dino_detrex_cluster.yaml
+++ b/config/train_detector/detector_dino_detrex_cluster.yaml
@@ -1,7 +1,7 @@
 model: 'dino_detrex'
 architecture: 'dino-resnet/dino_r50_4scale_24ep.py'
-checkpoint_path: '/home/mila/h/hugo.baudchon/CanopyRS/models/dino_r50_4scale_24ep.pth'
-batch_size: 4
+checkpoint_path: '/home/mila/h/hugo.baudchon/CanopyRS/pretrained_models/dino_r50_4scale_24ep.pth'
+batch_size: 8
 num_classes: 1
 box_predictions_per_image: null
 box_score_thresh: null
@@ -14,13 +14,13 @@ train_dataset_names: [
    'ecuador_tiputini',
    'panama_aguasalud',
 
-   'quebec_trees',
-   'quebec_plantations',
+   # 'quebec_trees',
+   # 'quebec_plantations',
 
-   'unitedstates_neon',
-   'ecuador_reforestree',
-   'global_oamtcd',
-   'panama_bci50ha'
+   # 'unitedstates_neon',
+   # 'ecuador_reforestree',
+   # 'global_oamtcd',
+   # 'panama_bci50ha'
    ]
 train_output_path: '/network/scratch/h/hugo.baudchon/training/detector'
 
