Can now do inference with dino-resnet from detrex in the pipeline

--- a/config/default/detector.yaml
+++ b/config/default/detector.yaml
@@ -1,5 +1,5 @@
 model: 'faster_rcnn'
-backbone: 'resnet101'
+architecture: 'resnet101'
 checkpoint_path: 'https://huggingface.co/Jinkoe/canopy_detector/resolve/main/detector_FINAL_dataset_resnet101_5.pt'
 batch_size: 5
 num_classes: 2
