--- a/config/default/segmenter.yaml
+++ b/config/default/segmenter.yaml
@@ -1,5 +1,6 @@
 model: 'sam2'
-backbone: 'l'
+architecture: 'l'
+image_batch_size: 1
 box_batch_size: 50
 box_padding_percentage: 0.00
 pp_n_workers: 16
