Removed tiles_names from data_state, the Evaluator component now takes care of aligning truth and preds tiles. THere are now 1 evaluator config for tile level and 1 for raster level. Also made infer_gdf_columns_to_pass and ground_truth_gdf_columns_to_pass sets instead of lists.

--- a/config/default_eval/pipeline.yaml
+++ b/config/default_eval/pipeline.yaml
@@ -1,9 +1,14 @@
 components_configs:
+  # detection
   - tilerizer: default/tilerizer_detector
   - detector: default/detector
+  - evaluator: default_eval/evaluator_detector_tile
   - aggregator: default/aggregator_detector
-  - evaluator: default_eval/evaluator_detector
+  - evaluator: default_eval/evaluator_detector_raster
+
+  # segmentation
   - tilerizer: default/tilerizer_segmenter
   - segmenter: default/segmenter
+  - evaluator: default_eval/evaluator_segmenter_tile
   - aggregator: default/aggregator_segmenter
-  - evaluator: default_eval/evaluator_segmenter
+  - evaluator: default_eval/evaluator_segmenter_raster
