Added temp path support for tilerizer

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ datasketches==5.0.2
 einops==0.7.0
 GDAL>=3.0.0,<=3.8.0
 geopandas==1.0.1
-geodataset @ git+https://github.com/hugobaudchon/geodataset.git@hugo-dev        # TODO change hugo-dev to a specific version
+geodataset @ git+https://github.com/hugobaudchon/geodataset.git@v0.3.1
 laspy==2.5.3
 numpy>=1.24.0,<2.0.0
 pandas>=2.2.0
