--- a/config/rubisco_inference/detector.yaml
+++ b/config/rubisco_inference/detector.yaml
@@ -1,6 +1,6 @@
 model: 'faster_rcnn'
 architecture: 'resnet101'
-checkpoint_path: 'https://huggingface.co/Jinkoe/canopy_detector/resolve/main/detector_FINAL_dataset_resnet101_5.pt'
+checkpoint_path: '/network/scratch/a/arthur.ouaknine/logs/detection/quebec_trees/fasterrcnn/resnet101/trim-blaze-3/checkpoints/checkpoint_iter_00072000.pt'
 batch_size: 5
-num_classes: 2
+num_classes: 19
 box_predictions_per_image: 500
