--- a/config/default_detection_multi_NQOS_best/pipeline.yaml
+++ b/config/default_detection_multi_NQOS_best/pipeline.yaml
@@ -1,4 +1,13 @@
 components_configs:
-  - tilerizer: default_detection_multi_NQOS_best/tilerizer
-  - detector: default_detection_multi_NQOS_best/detector
-  - aggregator: default_detection_multi_NQOS_best/aggregator
+  - tilerizer:
+      tile_type: tile
+      tile_size: 1777
+      tile_overlap: 0.75
+      ground_resolution: 0.045
+  - detector: default_components/detector_multi_NQOS_best
+  - aggregator:
+      nms_algorithm: 'iou'
+      score_threshold: 0.5
+      nms_threshold: 0.7
+      edge_band_buffer_percentage: 0.05
+      scores_weights: { 'detector_score': 1.0 }
