--- a/config/default_components/segmenter_sam2.yaml
+++ b/config/default_components/segmenter_sam2.yaml
@@ -1,5 +1,6 @@
 model: 'sam2'
 architecture: 'l'
+checkpoint_path: '/data/soduguay/selvamask/checkpoints/sam2_minimal/sam2_trainedfull15/model_best.pt'
 image_batch_size: 1
 box_batch_size: 50
 box_padding_percentage: 0.00
