--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 wandb/
 pretrained_models/
 jobs/
+experiments/*
 experiments/dataset_statistics/*.png
 experiments/resolution/*/*.yaml
 experiments/multi_resolution/*/*.yaml
+config_old/*
 output/*
 *.png
 *.txt
