--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "GDAL>=3.0.0,<=3.8.0",
     "geopandas==1.0.1",
     "geodataset @ git+https://github.com/hugobaudchon/geodataset.git@v0.6.4",
+    "hf_xet>=1.0.0",
     "numpy>=1.24.0,<2.0.0",
     "pandas>=2.2.0",
     "psutil==5.9.3",
