--- a/.github/workflows/mkdocs_deploy.yml
+++ b/.github/workflows/mkdocs_deploy.yml
@@ -1,2 +1,49 @@
-- name: Deploy MkDocs
-  uses: mhausenblas/mkdocs-deploy-gh-pages@1.26
+name: Deploy Docs with Versions
+
+on:
+  push:
+    branches:
+      - main
+      - dev
+
+permissions:
+  contents: write
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      # 1. Fetch deep history (Required for mike to update gh-pages branch)
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      # 2. Install mike alongside mkdocs
+      - name: Install dependencies
+        run: |
+          pip install mkdocs-material mike
+
+      - name: Configure Git User
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      # 3. Deploy logic
+      # If 'main', deploy as the "latest" version (default)
+      - name: Deploy Main (Production)
+        if: github.ref == 'refs/heads/main'
+        run: |
+          # 'latest' is the version name, 'update-aliases' sets it as default
+          mike deploy --push --update-aliases latest 
+
+      # If 'dev', deploy as "dev" version
+      - name: Deploy Dev (Staging)
+        if: github.ref == 'refs/heads/dev'
+        run: |
+          mike deploy --push dev
