--- a/canopyrs/config/segmenters/maskrcnn_r50_multi_selvamask.yaml
+++ b/canopyrs/config/segmenters/maskrcnn_r50_multi_selvamask.yaml
@@ -1,6 +1,6 @@
-model: dino_detrex
-architecture: dino/configs/dino-swin/dino_swin_large_384_5scale_36ep.py
-checkpoint_path: https://huggingface.co/CanopyRS/dino-swin-l-384-multi-NQOS-selvamask-FT/resolve/main/model_best.pth
+model: mask_rcnn_detectron2
+architecture: COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml
+checkpoint_path: https://huggingface.co/CanopyRS/maskrcnn-resnet50-multi-selvamask/resolve/main/model_best_maskrcnn_r50_selvamask.pth
 augmentation_brightness: 0.2
 augmentation_brightness_prob: 0.5
 augmentation_contrast: 0.2
@@ -8,7 +8,9 @@ augmentation_contrast_prob: 0.5
 augmentation_crop_fallback_to_augmentation_image_size: false
 augmentation_crop_min_intersection_ratio: 0.5
 augmentation_crop_prob: 1.0
+augmentation_drop_annotation_random_prob: 0.0
 augmentation_early_conditional_image_size: 2000
+augmentation_early_image_resize_test_only: null
 augmentation_flip_horizontal: true
 augmentation_flip_vertical: true
 augmentation_hue: 10
@@ -24,14 +26,16 @@ augmentation_train_crop_size_range:
 - 666
 - 2666
 backbone_model_pretrained: true
-batch_size: 1
+batch_size: 4
+box_nms_thresh: 0.5
 box_predictions_per_image: 500
+box_score_thresh: 0.05
 dataloader_num_workers: 4
 eval_epoch_interval: 3
 freeze_layers: 2
 grad_accumulation_steps: 1
-lr: 5.0e-05
-main_metric: bbox/AP
+lr: 0.005
+main_metric: segm/AP
 max_epochs: 800
 num_classes: 1
 scheduler_epochs_steps:
@@ -40,8 +44,12 @@ scheduler_epochs_steps:
 scheduler_gamma: 0.1
 scheduler_type: WarmupCosineLR
 scheduler_warmup_steps: 100
-seed: 33
+seed: 1
 test_dataset_names: []
+train_dataset_names:
+- extracted_segm_pp/selvamask
 train_log_interval: 10
 use_amp: true
 use_gradient_checkpointing: true
+valid_dataset_names:
+- extracted_segm_pp/selvamask
