--- a/canopyrs/config/pipelines/preset_det_single_S_fasterrcnn_r50.yaml
+++ b/canopyrs/config/pipelines/preset_det_single_S_fasterrcnn_r50.yaml
@@ -4,7 +4,7 @@ components_configs:
       tile_size: 800
       tile_overlap: 0.75
       ground_resolution: 0.1
-  - detector: detectors/fasterrcnn_r50_single_S
+  - detector: detectors/fasterrcnn_r50_single_S.yaml
   - aggregator:
       nms_algorithm: 'iou'
       score_threshold: 0.4
