--- a/canopyrs/config/pipelines/preset_seg_multi_NQOS_selvamask_SAM3_FT_fast.yaml
+++ b/canopyrs/config/pipelines/preset_seg_multi_NQOS_selvamask_SAM3_FT_fast.yaml
@@ -4,14 +4,14 @@ components_configs:
       tile_size: 1777
       tile_overlap: 0.5
       ground_resolution: 0.07
-  - detector: detectors/dino_swinL_multi_NQOS_selvamask_FT
+  - detector: detectors/dino_swinL_multi_NQOS_selvamask_FT.yaml
   - aggregator:
       nms_algorithm: 'iou'
       score_threshold: 0.4
       nms_threshold: 0.7
       edge_band_buffer_percentage: 0.05
       scores_weights: { 'detector_score': 1.0 }
-  - segmenter: segmenters/sam3_multi_selvamask_FT
+  - segmenter: segmenters/sam3_multi_selvamask_FT.yaml
   - aggregator:
       nms_algorithm: 'ioa-disambiguate'
       score_threshold: 0.6
