updated training config files

--- a/canopyrs/config/detectors/dino_swinL_multi_NQOS_selvamask_FT.yaml
+++ b/canopyrs/config/detectors/dino_swinL_multi_NQOS_selvamask_FT.yaml
@@ -26,6 +26,7 @@ augmentation_train_crop_size_range:
 backbone_model_pretrained: true
 batch_size: 1
 box_predictions_per_image: 500
+data_root_path: 'TODO: change this for training!'
 dataloader_num_workers: 4
 eval_epoch_interval: 3
 freeze_layers: 2
@@ -45,7 +46,9 @@ test_dataset_names: []
 train_dataset_names:
 - extracted_segm_pp/selvamask
 train_log_interval: 10
+train_output_path: 'TODO: change this for training!'
 use_amp: true
 use_gradient_checkpointing: true
 valid_dataset_names:
 - extracted_segm_pp/selvamask
+wandb_project: 'TODO: change this for training!'
