--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,11 @@ extra_css:
 extra_javascript:
   - javascripts/copy-config.js
 
+markdown_extensions:
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+
 plugins:
   - search
   - mkdocstrings:
@@ -48,11 +53,18 @@ nav:
     - Configuration: user-guide/configuration.md
     - Pipeline: user-guide/pipeline.md
     - Components: user-guide/components.md
+    - Standalone Usage: user-guide/standalone.md
     - Data: user-guide/data.md
     - Evaluation: user-guide/evaluation.md
     - Training: user-guide/training.md
   - API Reference:
     - Pipeline: api/pipeline.md
-    - Components: api/components.md
+    - Components:
+      - Base: api/components/base.md
+      - Tilerizer: api/components/tilerizer.md
+      - Detector: api/components/detector.md
+      - Segmenter: api/components/segmenter.md
+      - Aggregator: api/components/aggregator.md
+      - Classifier: api/components/classifier.md
     - DataState: api/data-state.md
   - Contributing: contributing.md
