--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
+    "setuptools<=70.0.0",
     "datasets>=3.5.0",
     "faster-coco-eval>=1.6.5",
     "GDAL>=3.0.0,<=3.8.0",
